--- a/config.json
+++ b/config.json
@@ -1,6 +1,1 @@
-{
-    "table_name": "",
-    "video_input_path": "",
-    "video_output_path": "",
-    "dictpen_video_path": "file:///userdisk/Music/"
-}
+{"table_name": "table_mathexercise_a813925856163com", "video_input_path": "D:/BaiduNetdiskDownload/video", "dictpen_video_path": "file:///userdisk/Music/"}
