feat：新增利用sftp远程拷贝，开机自启ssh

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"table_name": "table_mathexercise_a813925856163com", "video_input_path": "D:/BaiduNetdiskDownload/video", "dictpen_video_path": "file:///userdisk/Music/"}
+{"table_name": "", "video_input_path": "", "dictpen_video_path": "file:///userdisk/Music/", "dictpen_password": "", "copy_video_to_dictpen": 1, "delete_video_from_dictpen": 0, "remote_copy_video_to_dictpen": 1, "dictpen_root": "", "ip_address": ""}
